# josh

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEW_SESSION_PROMPT.md  README.md  legal.md  legal_threshold_plain_english.md  main.py  pyproject.toml  specs.md
agents/: capacity_analysis.py  data_acquisition.py  export.py  objective_standards.py  visualization.py
agents/analysis/: __init__.py  clearance_time.py  sb99.py
agents/scenarios/: __init__.py  base.py  local_density.py  sb79_transit.py  wildland.py
agents/visualization/: __init__.py  ab747_report.py  brief.py  brief_v2.py  brief_v3.py  demo.py  evaluation.py  helpers.py  popups.py  themes.py
ci/: make_index.py
config/: parameters.yaml
config/cities/: berkeley.yaml
config/projects/: berkeley_demo.yaml
docs/: JOSH_Legal_Defensibility_Memo.md  JOSH_PE_Technical_Brief.md  JOSH_Plain_English_For_Court.md  JOSH_Sidebar_WhatIf_Claude_Code_Prompt.md  JOSH_v3_Specification.md  city_onboarding.md  evacuation-capacity-standard-3.html  future_features.md  josh-vs-kld-comparison.md  multi_hazard_spec.md  road_override_spec.md
models/: __init__.py  evacuation_path.py  project.py  road_network.py
output/encinitas/: brief_v3_33_0260_n117_2548_120u.html  brief_v3_33_0377_n117_2397_250u.html  brief_v3_33_0455_n117_2628_29u.html  brief_v3_33_0501_n117_2791_448u.html  brief_v3_33_0581_n117_2891_199u.html  determination_33_0260_n117_2548_120u.txt  determination_33_0377_n117_2397_250u.txt  routes.csv  (+3 more)
pages/: index.html  viewer.html
static/: whatif_engine.js  whatif_utils.js
tests/: test_whatif_engine.js
(+1 files in other folders)
